--- a/src/utils/key-to-byte.json5
+++ b/src/utils/key-to-byte.json5
@@ -267,6 +267,7 @@
   MU_OFF: 0x5c27,
   MU_TOG: 0x5c28,
   MU_MOD: 0x5c29,
+  KC_APPLE_FN: 0x7000,
   BL_ON: 0x5cbb,
   BL_OFF: 0x5cbc,
   BL_DEC: 0x5cbd,
